# HElib

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  HElib.code-workspace  Makefile  cmake_install.cmake  install_manifest.txt
dependencies/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dependencies/Source/gmp_fetched/: Makefile  config.status  gmp.pc  gmpxx.pc  libgmp.la  libtool
dependencies/Source/gmp_fetched/.libs/: libgmp.lai
dependencies/Source/gmp_fetched/autom4te.cache/: output.0  requests  traces.0
dependencies/Source/gmp_fetched/cxx/: Makefile
dependencies/Source/gmp_fetched/demos/: Makefile
dependencies/Source/gmp_fetched/demos/calc/: Makefile
dependencies/Source/gmp_fetched/demos/expr/: Makefile
dependencies/Source/gmp_fetched/doc/: Makefile
dependencies/Source/gmp_fetched/mpf/: Makefile
dependencies/Source/gmp_fetched/mpn/: Makefile
dependencies/Source/gmp_fetched/mpq/: Makefile
dependencies/Source/gmp_fetched/mpz/: Makefile
dependencies/Source/gmp_fetched/printf/: Makefile
dependencies/Source/gmp_fetched/rand/: Makefile
dependencies/Source/gmp_fetched/scanf/: Makefile
dependencies/Source/gmp_fetched/tests/: Makefile
dependencies/Source/gmp_fetched/tests/cxx/: Makefile
dependencies/Source/gmp_fetched/tests/devel/: Makefile
dependencies/Source/gmp_fetched/tests/misc/: Makefile
dependencies/Source/gmp_fetched/tests/mpf/: Makefile
dependencies/Source/gmp_fetched/tests/mpn/: Makefile
dependencies/Source/gmp_fetched/tests/mpq/: Makefile
dependencies/Source/gmp_fetched/tests/mpz/: Makefile
dependencies/Source/gmp_fetched/tests/rand/: Makefile
dependencies/Source/gmp_fetched/tune/: Makefile
dependencies/Source/ntl_fetched/src/: MakeDesc  TestGetPID  TestGetTime  gen_gmp_aux  gf2x_version_1_2_or_later_required  libntl.la  makefile
dependencies/Source/ntl_fetched/src/.libs/: libntl.lai
dependencies/Source/ntl_fetched/src/libtool-build/: Makefile  config.status  libtool
dependencies/Stamp/gmp_fetched/: download-gmp_fetched.cmake  extract-gmp_fetched.cmake
dependencies/Stamp/ntl_fetched/: download-ntl_fetched.cmake  extract-ntl_fetched.cmake
dependencies/cuHElib/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  gpu_accel.cu  gpu_accel.cuh
dependencies/gmp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dependencies/ntl/: CTestTestfile.cmake  Makefile
dependencies/tmp/gmp_fetched/: gmp_fetched-cfgcmd.txt
dependencies/tmp/helib_external/: helib_external-cfgcmd.txt
dependencies/tmp/ntl_fetched/: ntl_fetched-cfgcmd.txt
examples/BGV_packed_arithmetic/: BGV_packed_arithmetic.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
examples/tutorial/: 04_ckks_matmul.cpp
helib_pack/include/NTL/: ConfigLog.h
helib_pack/lib/: libgmp.so.10.4.1
include/helib/: CModulus.h  Context.h  Ctxt.h  DoubleCRT.h  NumbTh.h  PAlgebra.h  bluestein.h
misc/aes/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  simpleAES.cpp
misc/matmul/: CMakeCache.txt  CMakeLists.txt  Makefile  Test_matmul.cpp  cmake_install.cmake  matmul.h
src/: CMakeLists.txt  CModulus.cpp  Context.cpp  Ctxt.cpp  DoubleCRT.cpp  NumbTh.cpp  PAlgebra.cpp  bluestein.cpp  norms.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
